crates/algokit_abi/tests/snapshots/test_arc56__arc56_json_roundtrip@complex_struct_test.snap
---
source: crates/algokit_abi/tests/test_arc56.rs
expression: parsed_json
---
{
  "arcs": [
    22,
    28
  ],
  "bareActions": {
    "call": [],
    "create": [
      "NoOp"
    ]
  },
  "byteCode": {
    "approval": "CiABASYGCgAEAAcAATEAATIOAAIAAgAEAAcAATEAATINbXlfYm94X3N0cnVjdBRteV9uZXN0ZWRfYm94X3N0cnVjdBhteV9ib3htYXBfc3RydWN0AAAAAAAAAHsfbXlfbmVzdGVkX2JveG1hcF9zdHJ1Y3QAAAAAAAAAezEYQAAhgAlteV9zdHJ1Y3QoZ4AQbXlfbmVzdGVkX3N0cnVjdClnMRtBAGKCAwQCvs4RBKSjzpoEMMbVijYaAI4DAC4AEAADgQBDMRkiEkQxGESIAF8iQzEZFEQxGESAEhUffHUAAgACAAQABwABMQABMrAiQzEZFEQxGEQ2GgGIABaABBUffHVMULAiQzEZQP+1MRgURCJDigEBi/9XAgCAB0hlbGxvLCBMUEkVFlcGAkxQiYoAACq8SCoovyu8SCspvycEvEgnBCi/JwW8SCcFKb8xAIAUbXlfbG9jYWxzdGF0ZV9zdHJ1Y3QoZjEAgBtteV9uZXN0ZWRfbG9jYWxzdGF0ZV9zdHJ1Y3QpZok=",
    "clear": "CoEBQw=="
  },
  "compilerInfo": {
    "compiler": "puya",
    "compilerVersion": {
      "major": 4,
      "minor": 1,
      "patch": 1
    }
  },
  "events": [],
  "methods": [
    {
      "actions": {
        "call": [
          "NoOp"
        ],
        "create": []
      },
      "args": [
        {
          "name": "name",
          "type": "string"
        }
      ],
      "events": [],
      "name": "hello",
      "readonly": false,
      "recommendations": {},
      "returns": {
        "type": "string"
      }
    },
    {
      "actions": {
        "call": [
          "NoOp"
        ],
        "create": []
      },
      "args": [],
      "events": [],
      "name": "give_me_root_struct",
      "readonly": false,
      "recommendations": {},
      "returns": {
        "struct": "RootStruct",
        "type": "(((string,string)))"
      }
    },
    {
      "actions": {
        "call": [
          "OptIn"
        ],
        "create": []
      },
      "args": [],
      "events": [],
      "name": "opt_in",
      "readonly": false,
      "recommendations": {},
      "returns": {
        "type": "void"
      }
    }
  ],
  "name": "ComplexStructTest",
  "networks": {},
  "source": {
    "approval": "I3ByYWdtYSB2ZXJzaW9uIDEwCiNwcmFnbWEgdHlwZXRyYWNrIGZhbHNlCgovLyBleGFtcGxlcy5zbWFydF9jb250cmFjdHMuc3RydWN0cy5jb250cmFjdC5TdHJ1Y3RzLl9fYWxnb3B5X2VudHJ5cG9pbnRfd2l0aF9pbml0KCkgLT4gdWludDY0OgptYWluOgogICAgaW50Y2Jsb2NrIDEKICAgIGJ5dGVjYmxvY2sgMHgwMDA0MDAwNzAwMDEzMTAwMDEzMiAweDAwMDIwMDAyMDAwNDAwMDcwMDAxMzEwMDAxMzIgIm15X2JveF9zdHJ1Y3QiICJteV9uZXN0ZWRfYm94X3N0cnVjdCIgMHg2ZDc5NWY2MjZmNzg2ZDYxNzA1ZjczNzQ3Mjc1NjM3NDAwMDAwMDAwMDAwMDAwN2IgMHg2ZDc5NWY2ZTY1NzM3NDY1NjQ1ZjYyNmY3ODZkNjE3MDVmNzM3NDcyNzU2Mzc0MDAwMDAwMDAwMDAwMDA3YgogICAgdHhuIEFwcGxpY2F0aW9uSUQKICAgIGJueiBtYWluX2FmdGVyX2lmX2Vsc2VAMgogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6MjEKICAgIC8vIHNlbGYubXlfc3RydWN0ID0gR2xvYmFsU3RhdGUoVmVjdG9yKHg9YXJjNC5TdHJpbmcoIjEiKSwgeT1hcmM0LlN0cmluZygiMiIpKSkKICAgIHB1c2hieXRlcyAibXlfc3RydWN0IgogICAgYnl0ZWNfMCAvLyAweDAwMDQwMDA3MDAwMTMxMDAwMTMyCiAgICBhcHBfZ2xvYmFsX3B1dAogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6MjIKICAgIC8vIHNlbGYubXlfbmVzdGVkX3N0cnVjdCA9IEdsb2JhbFN0YXRlKAogICAgcHVzaGJ5dGVzICJteV9uZXN0ZWRfc3RydWN0IgogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6MjMKICAgIC8vIFJvb3RTdHJ1Y3QobmVzdGVkPU5lc3RlZFN0cnVjdChjb250ZW50PVZlY3Rvcih4PWFyYzQuU3RyaW5nKCIxIiksIHk9YXJjNC5TdHJpbmcoIjIiKSkpKQogICAgYnl0ZWNfMSAvLyAweDAwMDIwMDAyMDAwNDAwMDcwMDAxMzEwMDAxMzIKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjIyLTI0CiAgICAvLyBzZWxmLm15X25lc3RlZF9zdHJ1Y3QgPSBHbG9iYWxTdGF0ZSgKICAgIC8vICAgICBSb290U3RydWN0KG5lc3RlZD1OZXN0ZWRTdHJ1Y3QoY29udGVudD1WZWN0b3IoeD1hcmM0LlN0cmluZygiMSIpLCB5PWFyYzQuU3RyaW5nKCIyIikpKSkKICAgIC8vICkKICAgIGFwcF9nbG9iYWxfcHV0CgptYWluX2FmdGVyX2lmX2Vsc2VAMjoKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjE5CiAgICAvLyBjbGFzcyBTdHJ1Y3RzKEFSQzRDb250cmFjdCk6CiAgICB0eG4gTnVtQXBwQXJncwogICAgYnogbWFpbl9iYXJlX3JvdXRpbmdAOAogICAgcHVzaGJ5dGVzcyAweDAyYmVjZTExIDB4YTRhM2NlOWEgMHgzMGM2ZDU4YSAvLyBtZXRob2QgImhlbGxvKHN0cmluZylzdHJpbmciLCBtZXRob2QgImdpdmVfbWVfcm9vdF9zdHJ1Y3QoKSgoKHN0cmluZyxzdHJpbmcpKSkiLCBtZXRob2QgIm9wdF9pbigpdm9pZCIKICAgIHR4bmEgQXBwbGljYXRpb25BcmdzIDAKICAgIG1hdGNoIG1haW5faGVsbG9fcm91dGVANSBtYWluX2dpdmVfbWVfcm9vdF9zdHJ1Y3Rfcm91dGVANiBtYWluX29wdF9pbl9yb3V0ZUA3CgptYWluX2FmdGVyX2lmX2Vsc2VAMTA6CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weToxOQogICAgLy8gY2xhc3MgU3RydWN0cyhBUkM0Q29udHJhY3QpOgogICAgcHVzaGludCAwIC8vIDAKICAgIHJldHVybgoKbWFpbl9vcHRfaW5fcm91dGVANzoKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjQwCiAgICAvLyBAYXJjNC5hYmltZXRob2QoYWxsb3dfYWN0aW9ucz1bIk9wdEluIl0pCiAgICB0eG4gT25Db21wbGV0aW9uCiAgICBpbnRjXzAgLy8gT3B0SW4KICAgID09CiAgICBhc3NlcnQgLy8gT25Db21wbGV0aW9uIGlzIG5vdCBPcHRJbgogICAgdHhuIEFwcGxpY2F0aW9uSUQKICAgIGFzc2VydCAvLyBjYW4gb25seSBjYWxsIHdoZW4gbm90IGNyZWF0aW5nCiAgICBjYWxsc3ViIG9wdF9pbgogICAgaW50Y18wIC8vIDEKICAgIHJldHVybgoKbWFpbl9naXZlX21lX3Jvb3Rfc3RydWN0X3JvdXRlQDY6CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTozNgogICAgLy8gQGFyYzQuYWJpbWV0aG9kKCkKICAgIHR4biBPbkNvbXBsZXRpb24KICAgICEKICAgIGFzc2VydCAvLyBPbkNvbXBsZXRpb24gaXMgbm90IE5vT3AKICAgIHR4biBBcHBsaWNhdGlvbklECiAgICBhc3NlcnQgLy8gY2FuIG9ubHkgY2FsbCB3aGVuIG5vdCBjcmVhdGluZwogICAgcHVzaGJ5dGVzIDB4MTUxZjdjNzUwMDAyMDAwMjAwMDQwMDA3MDAwMTMxMDAwMTMyCiAgICBsb2cKICAgIGludGNfMCAvLyAxCiAgICByZXR1cm4KCm1haW5faGVsbG9fcm91dGVANToKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjMyCiAgICAvLyBAYXJjNC5hYmltZXRob2QoKQogICAgdHhuIE9uQ29tcGxldGlvbgogICAgIQogICAgYXNzZXJ0IC8vIE9uQ29tcGxldGlvbiBpcyBub3QgTm9PcAogICAgdHhuIEFwcGxpY2F0aW9uSUQKICAgIGFzc2VydCAvLyBjYW4gb25seSBjYWxsIHdoZW4gbm90IGNyZWF0aW5nCiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weToxOQogICAgLy8gY2xhc3MgU3RydWN0cyhBUkM0Q29udHJhY3QpOgogICAgdHhuYSBBcHBsaWNhdGlvbkFyZ3MgMQogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6MzIKICAgIC8vIEBhcmM0LmFiaW1ldGhvZCgpCiAgICBjYWxsc3ViIGhlbGxvCiAgICBwdXNoYnl0ZXMgMHgxNTFmN2M3NQogICAgc3dhcAogICAgY29uY2F0CiAgICBsb2cKICAgIGludGNfMCAvLyAxCiAgICByZXR1cm4KCm1haW5fYmFyZV9yb3V0aW5nQDg6CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weToxOQogICAgLy8gY2xhc3MgU3RydWN0cyhBUkM0Q29udHJhY3QpOgogICAgdHhuIE9uQ29tcGxldGlvbgogICAgYm56IG1haW5fYWZ0ZXJfaWZfZWxzZUAxMAogICAgdHhuIEFwcGxpY2F0aW9uSUQKICAgICEKICAgIGFzc2VydCAvLyBjYW4gb25seSBjYWxsIHdoZW4gY3JlYXRpbmcKICAgIGludGNfMCAvLyAxCiAgICByZXR1cm4KCgovLyBleGFtcGxlcy5zbWFydF9jb250cmFjdHMuc3RydWN0cy5jb250cmFjdC5TdHJ1Y3RzLmhlbGxvKG5hbWU6IGJ5dGVzKSAtPiBieXRlczoKaGVsbG86CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTozMi0zMwogICAgLy8gQGFyYzQuYWJpbWV0aG9kKCkKICAgIC8vIGRlZiBoZWxsbyhzZWxmLCBuYW1lOiBhcmM0LlN0cmluZykgLT4gYXJjNC5TdHJpbmc6CiAgICBwcm90byAxIDEKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjM0CiAgICAvLyByZXR1cm4gIkhlbGxvLCAiICsgbmFtZQogICAgZnJhbWVfZGlnIC0xCiAgICBleHRyYWN0IDIgMAogICAgcHVzaGJ5dGVzIDB4NDg2NTZjNmM2ZjJjMjAKICAgIHN3YXAKICAgIGNvbmNhdAogICAgZHVwCiAgICBsZW4KICAgIGl0b2IKICAgIGV4dHJhY3QgNiAyCiAgICBzd2FwCiAgICBjb25jYXQKICAgIHJldHN1YgoKCi8vIGV4YW1wbGVzLnNtYXJ0X2NvbnRyYWN0cy5zdHJ1Y3RzLmNvbnRyYWN0LlN0cnVjdHMub3B0X2luKCkgLT4gdm9pZDoKb3B0X2luOgogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6NDAtNDEKICAgIC8vIEBhcmM0LmFiaW1ldGhvZChhbGxvd19hY3Rpb25zPVsiT3B0SW4iXSkKICAgIC8vIGRlZiBvcHRfaW4oc2VsZikgLT4gTm9uZToKICAgIHByb3RvIDAgMAogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6NDIKICAgIC8vIHNlbGYubXlfYm94X3N0cnVjdC52YWx1ZSA9IFZlY3Rvcih4PWFyYzQuU3RyaW5nKCIxIiksIHk9YXJjNC5TdHJpbmcoIjIiKSkKICAgIGJ5dGVjXzIgLy8gIm15X2JveF9zdHJ1Y3QiCiAgICBib3hfZGVsCiAgICBwb3AKICAgIGJ5dGVjXzIgLy8gIm15X2JveF9zdHJ1Y3QiCiAgICBieXRlY18wIC8vIDB4MDAwNDAwMDcwMDAxMzEwMDAxMzIKICAgIGJveF9wdXQKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjQzCiAgICAvLyBzZWxmLm15X25lc3RlZF9ib3hfc3RydWN0LnZhbHVlID0gUm9vdFN0cnVjdCgKICAgIGJ5dGVjXzMgLy8gIm15X25lc3RlZF9ib3hfc3RydWN0IgogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6NDMtNDUKICAgIC8vIHNlbGYubXlfbmVzdGVkX2JveF9zdHJ1Y3QudmFsdWUgPSBSb290U3RydWN0KAogICAgLy8gICAgIG5lc3RlZD1OZXN0ZWRTdHJ1Y3QoY29udGVudD1WZWN0b3IoeD1hcmM0LlN0cmluZygiMSIpLCB5PWFyYzQuU3RyaW5nKCIyIikpKQogICAgLy8gKQogICAgYm94X2RlbAogICAgcG9wCiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTo0MwogICAgLy8gc2VsZi5teV9uZXN0ZWRfYm94X3N0cnVjdC52YWx1ZSA9IFJvb3RTdHJ1Y3QoCiAgICBieXRlY18zIC8vICJteV9uZXN0ZWRfYm94X3N0cnVjdCIKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjQzLTQ1CiAgICAvLyBzZWxmLm15X25lc3RlZF9ib3hfc3RydWN0LnZhbHVlID0gUm9vdFN0cnVjdCgKICAgIC8vICAgICBuZXN0ZWQ9TmVzdGVkU3RydWN0KGNvbnRlbnQ9VmVjdG9yKHg9YXJjNC5TdHJpbmcoIjEiKSwgeT1hcmM0LlN0cmluZygiMiIpKSkKICAgIC8vICkKICAgIGJ5dGVjXzEgLy8gMHgwMDAyMDAwMjAwMDQwMDA3MDAwMTMxMDAwMTMyCiAgICBib3hfcHV0CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTo0NgogICAgLy8gc2VsZi5teV9ib3htYXBfc3RydWN0W2FyYzQuVUludDY0KDEyMyldID0gVmVjdG9yKHg9YXJjNC5TdHJpbmcoIjEiKSwgeT1hcmM0LlN0cmluZygiMiIpKQogICAgYnl0ZWMgNCAvLyAweDZkNzk1ZjYyNmY3ODZkNjE3MDVmNzM3NDcyNzU2Mzc0MDAwMDAwMDAwMDAwMDA3YgogICAgYm94X2RlbAogICAgcG9wCiAgICBieXRlYyA0IC8vIDB4NmQ3OTVmNjI2Zjc4NmQ2MTcwNWY3Mzc0NzI3NTYzNzQwMDAwMDAwMDAwMDAwMDdiCiAgICBieXRlY18wIC8vIDB4MDAwNDAwMDcwMDAxMzEwMDAxMzIKICAgIGJveF9wdXQKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjQ3CiAgICAvLyBzZWxmLm15X25lc3RlZF9ib3htYXBfc3RydWN0W2FyYzQuVUludDY0KDEyMyldID0gUm9vdFN0cnVjdCgKICAgIGJ5dGVjIDUgLy8gMHg2ZDc5NWY2ZTY1NzM3NDY1NjQ1ZjYyNmY3ODZkNjE3MDVmNzM3NDcyNzU2Mzc0MDAwMDAwMDAwMDAwMDA3YgogICAgLy8gZXhhbXBsZXMvc21hcnRfY29udHJhY3RzL3N0cnVjdHMvY29udHJhY3QucHk6NDctNDkKICAgIC8vIHNlbGYubXlfbmVzdGVkX2JveG1hcF9zdHJ1Y3RbYXJjNC5VSW50NjQoMTIzKV0gPSBSb290U3RydWN0KAogICAgLy8gICAgIG5lc3RlZD1OZXN0ZWRTdHJ1Y3QoY29udGVudD1WZWN0b3IoeD1hcmM0LlN0cmluZygiMSIpLCB5PWFyYzQuU3RyaW5nKCIyIikpKQogICAgLy8gKQogICAgYm94X2RlbAogICAgcG9wCiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTo0NwogICAgLy8gc2VsZi5teV9uZXN0ZWRfYm94bWFwX3N0cnVjdFthcmM0LlVJbnQ2NCgxMjMpXSA9IFJvb3RTdHJ1Y3QoCiAgICBieXRlYyA1IC8vIDB4NmQ3OTVmNmU2NTczNzQ2NTY0NWY2MjZmNzg2ZDYxNzA1ZjczNzQ3Mjc1NjM3NDAwMDAwMDAwMDAwMDAwN2IKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjQ3LTQ5CiAgICAvLyBzZWxmLm15X25lc3RlZF9ib3htYXBfc3RydWN0W2FyYzQuVUludDY0KDEyMyldID0gUm9vdFN0cnVjdCgKICAgIC8vICAgICBuZXN0ZWQ9TmVzdGVkU3RydWN0KGNvbnRlbnQ9VmVjdG9yKHg9YXJjNC5TdHJpbmcoIjEiKSwgeT1hcmM0LlN0cmluZygiMiIpKSkKICAgIC8vICkKICAgIGJ5dGVjXzEgLy8gMHgwMDAyMDAwMjAwMDQwMDA3MDAwMTMxMDAwMTMyCiAgICBib3hfcHV0CiAgICAvLyBleGFtcGxlcy9zbWFydF9jb250cmFjdHMvc3RydWN0cy9jb250cmFjdC5weTo1MAogICAgLy8gc2VsZi5teV9sb2NhbHN0YXRlX3N0cnVjdFtUeG4uc2VuZGVyXSA9IFZlY3Rvcih4PWFyYzQuU3RyaW5nKCIxIiksIHk9YXJjNC5TdHJpbmcoIjIiKSkKICAgIHR4biBTZW5kZXIKICAgIHB1c2hieXRlcyAibXlfbG9jYWxzdGF0ZV9zdHJ1Y3QiCiAgICBieXRlY18wIC8vIDB4MDAwNDAwMDcwMDAxMzEwMDAxMzIKICAgIGFwcF9sb2NhbF9wdXQKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjUxCiAgICAvLyBzZWxmLm15X25lc3RlZF9sb2NhbHN0YXRlX3N0cnVjdFtUeG4uc2VuZGVyXSA9IFJvb3RTdHJ1Y3QoCiAgICB0eG4gU2VuZGVyCiAgICBwdXNoYnl0ZXMgIm15X25lc3RlZF9sb2NhbHN0YXRlX3N0cnVjdCIKICAgIC8vIGV4YW1wbGVzL3NtYXJ0X2NvbnRyYWN0cy9zdHJ1Y3RzL2NvbnRyYWN0LnB5OjUxLTUzCiAgICAvLyBzZWxmLm15X25lc3RlZF9sb2NhbHN0YXRlX3N0cnVjdFtUeG4uc2VuZGVyXSA9IFJvb3RTdHJ1Y3QoCiAgICAvLyAgICAgbmVzdGVkPU5lc3RlZFN0cnVjdChjb250ZW50PVZlY3Rvcih4PWFyYzQuU3RyaW5nKCIxIiksIHk9YXJjNC5TdHJpbmcoIjIiKSkpCiAgICAvLyApCiAgICBieXRlY18xIC8vIDB4MDAwMjAwMDIwMDA0MDAwNzAwMDEzMTAwMDEzMgogICAgYXBwX2xvY2FsX3B1dAogICAgcmV0c3ViCg==",
    "clear": "I3ByYWdtYSB2ZXJzaW9uIDEwCiNwcmFnbWEgdHlwZXRyYWNrIGZhbHNlCgovLyBhbGdvcHkuYXJjNC5BUkM0Q29udHJhY3QuY2xlYXJfc3RhdGVfcHJvZ3JhbSgpIC0+IHVpbnQ2NDoKbWFpbjoKICAgIHB1c2hpbnQgMSAvLyAxCiAgICByZXR1cm4K"
  },
  "sourceInfo": {
    "approval": {
      "pcOffsetMethod": "none",
      "sourceInfo": [
        {
          "errorMessage": "OnCompletion is not NoOp",
          "pc": [
            214,
            244
          ]
        },
        {
          "errorMessage": "OnCompletion is not OptIn",
          "pc": [
            202
          ]
        },
        {
          "errorMessage": "can only call when creating",
          "pc": [
            273
          ]
        },
        {
          "errorMessage": "can only call when not creating",
          "pc": [
            205,
            217,
            247
          ]
        }
      ]
    },
    "clear": {
      "pcOffsetMethod": "none",
      "sourceInfo": []
    }
  },
  "state": {
    "keys": {
      "box": {
        "my_box_struct": {
          "key": "bXlfYm94X3N0cnVjdA==",
          "keyType": "AVMString",
          "valueType": "Vector"
        },
        "my_nested_box_struct": {
          "key": "bXlfbmVzdGVkX2JveF9zdHJ1Y3Q=",
          "keyType": "AVMString",
          "valueType": "RootStruct"
        }
      },
      "global": {
        "my_nested_struct": {
          "key": "bXlfbmVzdGVkX3N0cnVjdA==",
          "keyType": "AVMString",
          "valueType": "RootStruct"
        },
        "my_struct": {
          "key": "bXlfc3RydWN0",
          "keyType": "AVMString",
          "valueType": "Vector"
        }
      },
      "local": {
        "my_localstate_struct": {
          "key": "bXlfbG9jYWxzdGF0ZV9zdHJ1Y3Q=",
          "keyType": "AVMString",
          "valueType": "Vector"
        },
        "my_nested_localstate_struct": {
          "key": "bXlfbmVzdGVkX2xvY2Fsc3RhdGVfc3RydWN0",
          "keyType": "AVMString",
          "valueType": "RootStruct"
        }
      }
    },
    "maps": {
      "box": {
        "my_boxmap_struct": {
          "keyType": "uint64",
          "prefix": "bXlfYm94bWFwX3N0cnVjdA==",
          "valueType": "Vector"
        },
        "my_nested_boxmap_struct": {
          "keyType": "uint64",
          "prefix": "bXlfbmVzdGVkX2JveG1hcF9zdHJ1Y3Q=",
          "valueType": "RootStruct"
        }
      },
      "global": {},
      "local": {}
    },
    "schema": {
      "global": {
        "bytes": 2,
        "ints": 0
      },
      "local": {
        "bytes": 2,
        "ints": 0
      }
    }
  },
  "structs": {
    "NestedStruct": [
      {
        "name": "content",
        "type": "Vector"
      }
    ],
    "RootStruct": [
      {
        "name": "nested",
        "type": "NestedStruct"
      }
    ],
    "Vector": [
      {
        "name": "x",
        "type": "string"
      },
      {
        "name": "y",
        "type": "string"
      }
    ]
  },
  "templateVariables": {}
}
